Actualización de la Interfaz.

--- a/MovieService/Views/Home/Index.cshtml
+++ b/MovieService/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             <div class="panel-body">
                 <ul class="list-unstyled" data-bind="foreach:movies">
                     <li>
-                        <strong><span data-bind="text:Title"></span></strong>: <span data-bind="text:Price"></span>
+                        <strong><span data-bind="text:Title"></span></strong>
                         <small><a href="#" data-bind="click: $parent.getMovieDetail">Detalles</a></small>
                     </li>
                 </ul>
